--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 AUTH0_DOMAIN=dev-082gzdfo6ikj1l5k.us.auth0.com
 AUTH0_CLIENT_ID=mh2AmBu0ZPbtrPozmOhD8TRRWKH1DBRx
+STORAGE_KEY=E35548426EE5D85AE31DA47A75DD7
