--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
     "test": "jest"
   },
   "dependencies": {
+    "@haskkor/react-native-pincode": "^1.22.6",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
+    "@react-navigation/stack": "^6.3.29",
+    "@reduxjs/toolkit": "^2.2.3",
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-auth0": "^3.1.0",
@@ -20,7 +24,9 @@
     "react-native-paper": "^5.12.3",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.30.1",
+    "react-native-toast-message": "^2.2.0",
     "react-native-vector-icons": "^10.0.3",
+    "react-redux": "^9.1.0",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
